--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   cupertino_icons: ^1.0.2
   sqflite: ^2.3.2
   getwidget: ^2.0.4
+  image_picker: ^1.0.4
+  path_provider: any
+
 
 dev_dependencies:
   flutter_test:
