--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   getwidget: ^2.0.4
   image_picker: ^1.0.4
   path_provider: any
+  flutter_staggered_grid_view: ^0.4.0
 
 
 dev_dependencies:
